# autoresearch_harness

./: .gitignore  .gitmodules  ARTIFACT_README.md  CLAUDE.md  ENVIRONMENT.md  README.md  artifact_manifest.json  autoresearch_director_report.md  autoresearch_director_report_v2.docx  instruction.md  paper_figures.ipynb  paper_figures.ipynb.bak  priority0_report.md  pyproject.toml  stage_1_demo_plan_optimized_for_sudhir.md  view.md
docs/: architecture.md  git_structure.md  memory_architecture.md  provenance.md  stage_2_current_structure.md  trial_schema.md
notebooks/: stage2_contract_smoke.ipynb  stage2_overview_and_demo.ipynb  stage2_real_resnet_report.ipynb
plan/: KDD_AAE_execution_chunks.md  TODO.md  revision_5.md  revision_6.md  stage_2_implementation_plan.md  stage_2_kdd_aae_instruction_aligned.md  supplement.md
scripts/: analyze_counterfactual.py  analyze_governance_counterfactual.py  analyze_lr_synthetic_lg_ablation.py  analyze_rationale_truncation.py  analyze_seed_replication.py  bootstrap_governance_cis.py  build_node_research_context.py  check_experiments.sh  check_kdd_artifact_completeness.py  check_kdd_memory_ablation.py  compare_governed_ungoverned.py  compare_similarity_methods.py  compute_bootstrap_cis.py  create_trial_worktree.py  export_failure_taxonomy_labels.py  export_kdd_figures.py  export_kdd_tables.py  export_kdd_traces.py  export_openml_paper_table.py  export_paper_figures.py  export_paper_tables.py  generate_artifact_manifest.py  generate_research_scouting_plan.py  inspect_node.py  parse_node_metric.py  promote_master_snapshot.py  (+38 more)
(+345 files in other folders)
