[project]
name = "autoresearch-harness"
version = "0.2.0"
description = "Governed autonomous experimentation framework for bounded agentic optimization."
requires-python = ">=3.11"
dependencies = [
  "langchain-core>=1.3.0",
  "langchain-ollama>=0.3.0",
  "langgraph>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
