[project]
name = "autoresearch-harness"
version = "0.2.0"
description = "Governed autonomous experimentation framework for bounded agentic optimization."
requires-python = ">=3.11"
dependencies = [
  "langchain-core>=1.3.0",
  "langchain-openai>=1.0.0",
  "langchain-ollama>=0.3.0",
  "langchain-anthropic>=1.0.0",
  "langgraph>=1.0.0",
  "numpy>=2.0.0",
  "pandas>=2.0.0",
  "pyyaml>=6.0.0",
  "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
